frontend/src/components/inputField/inputField.css
input {
    box-sizing: border-box;
}

.field {
    width: 20vw;
    height: 6vh;
    border-radius: 5vh;
    margin-bottom: 2vh;
    position: relative;
    background-color: #1B1340;
    transition: 0.5s background-color ease-in-out, 0.5s box-shadow ease-in-out;
    box-shadow: 0vh 0.5vh 2vh 0vh rgba(0, 0, 0, 0.2);
}

.field:hover {
    background-color: #1B1340;
}

.field.active {
    background-color: #ffffff;
}

.field.active input {
    padding: 4vh 2vw 3vh 1vw;
}

.field.active input+label {
    top: 0.3vh;
    left: 1vw;
    opacity: 1;
    color: #512da8;
}

.field.locked {
    pointer-events: none;
}

.field input {
    width: 100%;
    height: 7vh;
    position: relative;
    padding: 0vh 1vw;
    border: none;
    border-radius: 0.5vh;
    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
    font-size: 2vh;
    font-weight: 400;
    line-height: normal;
    background-color: transparent;
    color: #282828;
    outline: none;
    box-shadow: 0vh 0.5vh 2vh 0vh transparent;
    transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out,
        0.1s padding ease-in-out;
}

.field input::-webkit-input-placeholder {
    color: rgba(255, 255, 255, 0.8);
}

.field input::-moz-placeholder {
    color: rgba(255, 255, 255, 0.8);
}

.field input:-ms-input-placeholder {
    color: rgba(255, 255, 255, 0.8);
}

.field input:-moz-placeholder {
    color: rgba(255, 255, 255, 0.8);
}

.field input+label {
    position: absolute;
    top: 3vh;
    left: 2vw;
    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
    font-size: 1.5vh;
    font-weight: 600;
    line-height: 3vh;
    color: #ffffff;
    opacity: 0;
    pointer-events: none;
    transition: 0.1s all ease-in-out;
}

.field input+label.error {
    color: #ec392f;
}

.field p.predicted {
    position: absolute;
    top: 3vh;
    left: 2vw;
    font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
    font-size: 2vh;
    font-weight: 400;
    line-height: 3vh;
    color: #e0e0e0;
    opacity: 1;
    pointer-events: none;
}

.passwordIcon {
    position: absolute;
    top: 0.6vh;
    left: 17vw;
    cursor: pointer;
    text-shadow: 0 0 0.5vh #ffffff;
}

